--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -31,46 +31,42 @@
                 </div>
                 <h5 class="page-sub-header text-white text-center text-md-left">There are {{ live_listings }} listings live on the site.</h5>
                 {% if require_approval > 0 %}
-                <h5 class="page-sub-header text-white text-center text-md-left">You have {{ require_approval }} listing{% if require_approval > 1%}s that are{% endif %} pending approval.</h5>
+                    <h5 class="page-sub-header text-white text-center text-md-left">You have {{ require_approval }} listing{% if require_approval > 1%}s that are{% endif %} pending approval.</h5>
                 {% else %}
-                <h5 class="page-sub-header text-white text-center text-md-left">There are no listings awating approval.</h5>
+                    <h5 class="page-sub-header text-white text-center text-md-left">There are no listings awating approval.</h5>
                 {% endif %}
-                
-
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-10">
                 {% for conversion in conversions %}
-                        <div class="card no-border mb-4">
-                            <div class="card-body border-white text-white">
-                                <div class="row">
-                                    <div class="col-12 col-lg-6">
-                                        <h3>{{ conversion.listing_title }}</h3>
-                                        <p>{{ conversion.category }}</p>
-                                        <p>Username: {{ conversion.user.user }} </p>
-                                    </div>
-                                    <div class="col-12 col-lg-6">
-                                       
-                                    </div>
+                    <div class="card no-border mb-4">
+                        <div class="card-body border-white text-white">
+                            <div class="row">
+                                <div class="col-12 col-lg-6">
+                                    <h3>{{ conversion.listing_title }}</h3>
+                                    <p>{{ conversion.category }}</p>
+                                    <p>Username: {{ conversion.user.user }} </p>
                                 </div>
-                            </div>
-                            <div class="card-footer text-center text-lg-left">
-                                <a href="{% url 'conversion_detail' conversion.id %}?from_admin=True" class="btn btn-outline-black rounded-2 text-white mb-2">View Details</a>
-                                <a href="{% url 'edit_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
-                                <a onclick="document.getElementById('id{{ forloop.counter }}').style.display='block'" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
-                                <a class="ml-2 btn btn-outline-black rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
-                                {% if conversion.is_active %}
-                                    <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
-                                {% else %}
-                                    <a href="{% url 'approve_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Approve Listing <i class="ml-1 fa fa-minus-circle"></i></a>
-                                {% endif %}
-                                <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
-                                <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
+                                <div class="col-12 col-lg-6"></div>
                             </div>
                         </div>
-                        <!--- Delete Confirm Modal --->
-                        {% include "conversions/includes/delete-conversion-confirm-modal.html" %}
+                        <div class="card-footer text-center text-lg-left">
+                            <a href="{% url 'conversion_detail' conversion.id %}?from_admin=True" class="btn btn-outline-black rounded-2 text-white mb-2">View Details</a>
+                            <a href="{% url 'edit_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
+                            <a onclick="document.getElementById('id{{ forloop.counter }}').style.display='block'" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
+                            <a class="ml-2 btn btn-outline-black rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
+                            {% if conversion.is_active %}
+                                <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                            {% else %}
+                                <a href="{% url 'approve_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Approve Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                            {% endif %}
+                            <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
+                            <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
+                        </div>
+                    </div>
+                    <!--- Delete Confirm Modal --->
+                    {% include "conversions/includes/delete-conversion-confirm-modal.html" %}
                 {% endfor %}
             </div>
         </div>
