Update faq content

--- a/home/templates/home/faq.html
+++ b/home/templates/home/faq.html
@@ -11,7 +11,7 @@
 <div class="overlay"></div>
 <div class="container">
     <div class="row">
-        <div class="col mt-2">
+        <div class="col mt-5">
             <h2 class="logo-font mt-5 mb-4 text-white text-center text-lg-left">FAQ</h2>
             <hr>
         </div>
@@ -22,15 +22,32 @@
         <div class="col-lg-6 text-center">
             <div class="q-a-content">
                 <div class="question" id="question-1">
-                    <a>Do you mix / master all genres of audio?</a>
+                    <a>How do I list a conversion on the site?</a>
                     <a href="#" id="icon-1">
                     <i class="fa-plus fas ml-2">
                     <span class="sr-only">Expand</span>
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-1">
-                    <p>At SOMA Audio Services, we have vast experience working with many genres of music. Therefore we happily accept music from all genres. If you would like to hear some of our work related to the genre you have in mind, please get in touch using our contact form.</p>
+                <div class="answer p-4" id="answer-1">
+                    <p>To get a coversion of yours listed onto our site is simple!</p>
+                    <ol class="text-left">
+                        <li>
+                        Firstly make sure you are signed in, or sign up if your new here.
+                        </li>
+                        <li>
+                            Then simply select 'Add a conversion' from the nav bar, or using the link in your profile.
+                        </li>
+                        <li>
+                            You will be presented with a form, which will gather all the information needed to get your conversion advertised. Make sure to have all this ready and some great photographs too!!
+                        </li>
+                        <li>
+                            Once this is completed, purchase a listing token and remember to assign your newly added listing to it on the product page!
+                        </li>
+                        <li>
+                            When your order is complete, within 24hours your listing will be live on the site. In the meantime, feel free to edit it as you please from 'my_listings' in your profile!
+                        </li>
+                    </ol>
                 </div>
             </div>
             <div class="q-a-content">
@@ -42,8 +59,8 @@
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-2">
-                    <p>You can leave us a message using our contact form, send us an email here: contact@somapostproduction.com</p>
+                <div class="answer p-4" id="answer-2">
+                    <p>You can get in touch with us here: wildmileconversions@gmail.com</p>
                     <p>Alternatively give Jamie a call on +447720902039</p>
                 </div>
             </div>
@@ -56,22 +73,21 @@
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-3">
-                    <p>Head over to our rates page, to see our multi track discount (upto 20%). The more work you need completing, the cheaper the price per track!</p>
+                <div class="answer p-4" id="answer-3">
+                    <p>We currently have listing tokens at a reduced rate of £0.00.  YES FREE!! UNTIL THE END OF JULY</p>
                 </div>
             </div>
             <div class="q-a-content">
                 <div class="question" id="question-4">
-                    <a>How long does mastering / mixing take to complete?</a>
+                    <a>What happens to my listing after the listing token expires?</a>
                     <a href="#" id="icon-4">
                     <i class="fa-plus fas ml-2">
                     <span class="sr-only">Expand</span>
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-4">
-                    <p>We aim to complete all work within 7 working days, but this is dependant on workload. If your project is expected to take more than 7 days, a member of the team will get in touch with you.</p>
-                    <p>If your seeking a quicker service, we offer priority mastering on all services. This incurrs a surcharge - check out the rates page for more detail.</p>
+                <div class="answer p-4" id="answer-4">
+                    <p>Your listing will remain active in your account for a further 7days after expiry. If a new listing token isn't applied at the end of this period, the listing will be deleted from the server.</p>
                 </div>
             </div>
         </div>
@@ -79,55 +95,55 @@
         <div class="col-lg-6 text-center">
             <div class="q-a-content">
                 <div class="question" id="question-5">
-                    <a>Can I discuss my project with you before you begin working on the audio?</a>
+                    <a>I have a conversion which doesn't quite fit into a campervan or catering/bar category</a>
                     <a href="#" id="icon-5">
                     <i class="fa-plus fas ml-2">
                     <span class="sr-only">Expand</span>
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-5">
-                    <p>Our main priority is getting the best out of our services for our customers, so understanding your requirements is a key part in acheiving this</p>
-                    <p>Once you are ready to go ahead with any of our services, give us a call to discuss your needs.</p>
+                <div class="answer p-4" id="answer-5">
+                    <p>Our main priority at the moment is adding new categories to the site, along with appropriate forms to get them added correctly</p>
+                    <p>We do hope to have these available by the end of the summer, so please bear with us. Alternatively if you think you can get the info you need into the current add conversion form, please go ahead. You can preview the listing before applying a token, to make sure it's what you are looking for.</p>
                 </div>
             </div>
             <div class="q-a-content">
                 <div class="question" id="question-6">
-                    <a>How do I send you audio files and what format is required?</a>
+                    <a>If I need to remove a listing from the site, can I claim a refund for unused listing token days?</a>
                     <a href="#" id="icon-6">
                     <i class="fa-plus fas ml-2">
                     <span class="sr-only">Expand</span>
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-6">
-                    <p>Once an order is placed, we will send over a confirmation email with links to upload to either our Google Drive, or DropBox directories, as well as details on how to name your files and the formats we require files to be.</p>
+                <div class="answer p-4" id="answer-6">
+                    <p>Once an order is placed, unfortunately we can't offer refunds for our digital products. Any unused days would be lost, but hey on the brightside you probably sold your conversion!!!"</p>
                 </div>
             </div>
             <div class="q-a-content">
                 <div class="question" id="question-7">
-                    <a>Do I pay before the work is started?</a>
+                    <a>Do you post merchandise internationally?</a>
                     <a href="#" id="icon-7">
                     <i class="fa-plus fas ml-2">
                     <span class="sr-only">Expand</span>
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-7">
-                    <p>Yes, all payments must be recieved in full to commission the work on your audio files</p>
+                <div class="answer p-4" id="answer-7">
+                    <p>Yes we ship worldwide, all of our merchandise is make in the UK and shipped from the UK. Carrier charges will be calculated at checkout</p>
                 </div>
             </div>
             <div class="q-a-content">
                 <div class="question" id="question-8">
-                    <a>Can you make revisions once the work is complete?</a>
+                    <a>Can you make revisions to listings once they are live on the site?</a>
                     <a href="#" id="icon-8">
                     <i class="fa-plus fas ml-2">
                     <span class="sr-only">Expand</span>
                     </i>
                     </a>
                 </div>
-                <div class="answer" id="answer-8">
-                    <p>We want our customers to be happy with how their final product. That being said, if you feel that you'd like some changes to be made to the sound, then get in touch. We will work with you to ensure its how you imagined.</p>
+                <div class="answer p-4" id="answer-8">
+                    <p>We want our customers to be happy with how their final listing looks. Therefore we allow you to make changes, update/amend the photographs. Pretty much everything, as long the changes are for the same vehicle. Listings cannot and should not be amended to reflect a different vehicle.</p>
                 </div>
             </div>
         </div>
