Update about us template content

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -21,9 +21,12 @@
             <img class="img-fluid" src="{{ MEDIA_URL }}about-us-3.png" alt="">
         </div>
         <div class="col-12 col-xl-7">
-            <div class="bg-cream br-1 d-flex align-items-center">
-                <p class="text-black p-5 large-font">We are Jamie and Diana Rolls, and we decided to build Wild Mile Conversions after converting our own transit van into a camper in 2017. While building our own camper van, we spent hours sifting through various websites searching for the perfect van to convert and then a variety of different websites looking for inspiration.
-                    It became apparent while searching through all of these websites, that there were so many creative minds building and crafting beautiful converted vehicles, mobile bars and catering vans. However most of these beautiful creations were being sold using non-specific online market places. These special conversions were like beautiful, hidden gems listed within an ocean of uninspiring factory-fitted vehicles.
+            <div class="bg-cream br-1">
+                <p class="text-black pl-5 pr-5 pt-5 large-font">We are Jamie and Diana Rolls, and we decided to build Wild Mile Conversions after converting our own transit van into a camper in 2017. While building our own camper van, we spent hours sifting through various websites searching for the perfect van to convert and then a variety of different websites looking for inspiration.
+                </p>
+                <p class="text-black pt-2 pl-5 pr-5 large-font">It became apparent while searching through all of these websites, that there were so many creative minds building and crafting beautiful converted vehicles, mobile bars and catering vans. 
+                </p>
+                <p class="text-black pl-5 pr-5 pt-2 pb-5 large-font">However most of these beautiful creations were being sold using non-specific online market places. These special conversions were like beautiful, hidden gems listed within an ocean of uninspiring factory-fitted vehicles.
                 </p>
             </div>
         </div>
@@ -33,9 +36,14 @@
             <img class="img-fluid" src="{{ MEDIA_URL }}about-us-2.png" alt="">
         </div>
         <div class="col-12 col-xl-7">
-            <div class="bg-cream br-1 d-flex align-items-center">
-                <p class="text-black large-font p-5">After travelling to Portugal in our newly built van, we were immersed into a culture of creativity at a music festival, and we met so many creative and remarkable people. We saw amazing hand-crafted live-in vehicles, and we were fully inspired. On our ferry home, full of energy and enthusiasm, we felt it would be really great if we could create a space where we could showcase and highlight the talents of these skilled artists and crafters. We felt this would benefit those wishing to sell their unique conversions by enabling the artists to gain the recognition they deserve while targeting those who would most appreciate their work. This would also help buyers to find just their perfect conversion, without having to find that hidden gem in the ocean! We also felt this space could offer a source of inspiration for those embarking on their own building projects.
-                    Feeling fully inspired from our van life in Portugal, the dust still fresh on the roof, we began Wild Mile Conversions; an idea born on the wild miles we covered while travelling through Portugal.
+            <div class="bg-cream br-1">
+                <p class="text-black pl-5 pr-5 pt-5 large-font">After travelling to Portugal in our newly built van, we were immersed into a culture of creativity at a music festival, and we met so many creative and remarkable people. We saw amazing hand-crafted live-in vehicles, and we were fully inspired. 
+                </p>
+                <p class="text-black pt-2 pl-5 pr-5 large-font">On our ferry home, full of energy and enthusiasm, we felt it would be really great if we could create a space where we could showcase and highlight the talents of these skilled artists and crafters. 
+                </p>
+                <p class="text-black pt-2 pl-5 pr-5 large-font">We felt this would benefit those wishing to sell their unique conversions by enabling the artists to gain the recognition they deserve while targeting those who would most appreciate their work. This would also help buyers to find just their perfect conversion, without having to find that hidden gem in the ocean! We also felt this space could offer a source of inspiration for those embarking on their own building projects.
+                </p>
+                <p class="text-black pl-5 pr-5 pt-2 pb-5 large-font">Feeling fully inspired from our van life in Portugal, the dust still fresh on the roof, we began Wild Mile Conversions; an idea born on the wild miles we covered while travelling through Portugal.
                 </p>
             </div>
         </div>
