--- a/bag/templates/bag/bag-total.html
+++ b/bag/templates/bag/bag-total.html
@@ -2,7 +2,7 @@
 <h6 class="text-white">Delivery: £{{ delivery|floatformat:2 }}</h6>
 <h4 class="mt-4 text-white"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
 {% if free_delivery_delta > 0 %}
-    <p class="mb-1 text-danger">
+    <p class="mb-1 text-warning">
         You could get free delivery by spending just <strong>£{{ free_delivery_delta }}</strong> more!
     </p>
 {% endif %}
