--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,5 +1,5 @@
 {% if item.product.image %}
-<img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+<img class="img-fluid w-50 rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
 {% else %}
-<img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+<img class="img-fluid w-50 rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
 {% endif %}
