--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,5 +1,6 @@
 {% if item.product.image %}
 <img class="img-fluid w-50 rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+<a class="remove-item bg-dark p-3 border-muted br-1 text-white ml-3" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
 {% else %}
 <img class="img-fluid w-50 rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
 {% endif %}
