--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -1,4 +1,4 @@
-<form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
+<form class="form update-form mb-3" method="POST" action="{% url 'adjust_bag' item.item_id %}">
     {% csrf_token %}
     {% if item.product.sku != '12345678' %}
     <div class="form-group">
@@ -57,8 +57,6 @@
     {% endif %}
 </form>
 {% if item.product.sku != '12345678' %}
-    <a class="update-link bg-dark p-1 border-muted br-1 text-white float-left"><small>Update</small></a>
-    <a class="remove-item bg-dark p-1 border-muted br-1 text-white float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
-{% else %}
-    <a class="remove-item bg-dark p-1 border-muted br-1 text-white float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+    <a class="update-link bg-dark p-2 mb-5 border-muted br-1 text-white float-left"><small>Update</small></a>
+    <hr class="bag-break">
 {% endif %}
