--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -87,6 +87,7 @@
                                     <td class="py-3 w-25">
                                         <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
+                                            <input type="hidden" name="{{ csrf_token }}" id="csrf">
                                             {% if item.product.sku != '12345678' %}
                                             <div class="form-group">
                                                 <div class="input-group">
@@ -201,29 +202,6 @@
 {% endblock %}
 
 {% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
-
-
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form');
-        form.submit();
-    })
-
-    // Remove item and reload on click
-    $('.remove-item').click(function(e) {
-        var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('product_size');
-        var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
-
-        $.post(url, data)
-         .done(function() {
-             location.reload();
-        });
-    })
-</script>
+    {{ block.super }}
+    <script src="{% static 'bag/js/buttons.js' %}"></script>
 {% endblock %}
