Update merchandise image sizes

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -34,6 +34,7 @@
                         <p class="mb-2 mt-0 small text-white">Subtotal</p>
                     </div>
                 </div>
+                <!-- Order Summary -->
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-2 mb-1">
