--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -31,7 +31,7 @@ tr {
 .profile-listing-image {
     height: auto;
     border-radius: 20px;
-    height: 220px;
+    height: 250px;
     width: 100%;
     object-fit: cover;
 }
@@ -69,7 +69,14 @@ tr {
     min-height: 261px;
 }
 
-@media(max-width: 991px) {
+@media(min-width: 1600px) {
+    .saved-listing-image,
+    .profile-listing-image  {
+    height: 400px;
+    }
+}
+
+@media(max-width: 990px) {
     .saved-listing-image,
     .profile-listing-image  {
     height: 425px;
