--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -179,35 +179,7 @@
 
 {% block postloadjs %}
     {{ block.super }}
-
-    <script type="text/javascript">
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
-    </script>
-    
-    <script type="text/javascript">
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-            
-            var selectedVal = selector.val();
-            if(selectedVal != "reset") {
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort", sort);
-                currentUrl.searchParams.delete("direction", direction);
-
-                window.location.replace(currentUrl);
-            }
-        })
-    </script>
+    <script src="{% static 'conversions/js/main.js' %}"></script>
 {% endblock %}
 
 
