Update conversion image handling logic

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -846,6 +846,8 @@ hr.bag-break {
 .carousel {
     width: 100% !important;
     height: 100% !important;
+    display: flex;
+    align-items: center;
 }
 
 
